Fix overflow on category bar

--- a/src/components/CategoryBar/styles.module.scss
+++ b/src/components/CategoryBar/styles.module.scss
@@ -18,6 +18,7 @@
 }
 .content {
   flex: 1;
+  overflow-x: auto;
 }
 
 .actions {
